--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
@@ -8,6 +8,7 @@
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
+@implements IDisposable;
 
 <div class="layui-card">
     <div class="layui-card-header">
@@ -169,4 +170,8 @@
         nav.NavigateTo($"/builder/log/{Id}", true);
     }
 
+    public void Dispose()
+    {
+        _timer?.Dispose();
+    }
 }
