--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FailList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FailList.razor
@@ -9,6 +9,7 @@
 @inject NavigationManager nav;
 @inject IJSRuntime js;
 @inject Blazored.LocalStorage.ILocalStorageService storage;
+@implements IDisposable;
 
 <div class="layui-card">
     <div class="layui-card-header" id="anchor-play-header">
@@ -76,7 +77,7 @@
                             var info = _lst[index];
                             <tr data-index="@index">
                                 <td>
-                                    <div class="laytable-cell-task-1">@info.Caption</div>
+                                    <div class="laytable-cell-task-1">【@info.JobName】@info.Caption</div>
                                 </td>
                                 <td>
                                     <div class="layui-table-cell laytable-cell-task-2">@info.StartAt.ToString("yyyy-MM-dd HH:mm:ss")</div>
@@ -200,4 +201,8 @@
         nav.NavigateTo("/fss/task_group/list");
     }
 
+    public void Dispose()
+    {
+        _timer?.Dispose();
+    }
 }
