添加FSS日志列表

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -42,6 +42,11 @@
                                 </NavLink>
                             </dd>
                             <dd data-name="grid">
+                                <NavLink class="nav-link" href="/fss/runlog/list" Match="NavLinkMatch.All">
+                                    日志
+                                </NavLink>
+                            </dd>
+                            <dd data-name="grid">
                                 <NavLink class="nav-link" href="/fss/tasks/faillist" Match="NavLinkMatch.All">
                                     失败任务
                                 </NavLink>
