--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -47,6 +47,11 @@
                                 </NavLink>
                             </dd>
                             <dd data-name="grid">
+                                <NavLink class="nav-link" href="/fss/tasks/alllist" Match="NavLinkMatch.All">
+                                    所有任务
+                                </NavLink>
+                            </dd>
+                            <dd data-name="grid">
                                 <NavLink class="nav-link" href="/fss/tasks/faillist" Match="NavLinkMatch.All">
                                     失败任务
                                 </NavLink>
