--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -48,17 +48,12 @@
                             </dd>
                             <dd data-name="grid">
                                 <NavLink class="nav-link" href="/fss/tasks/alllist" Match="NavLinkMatch.All">
-                                    所有任务
+                                    当前任务
                                 </NavLink>
                             </dd>
                             <dd data-name="grid">
-                                <NavLink class="nav-link" href="/fss/tasks/faillist" Match="NavLinkMatch.All">
-                                    失败任务
-                                </NavLink>
-                            </dd>
-                            <dd data-name="grid">
-                                <NavLink class="nav-link" href="/fss/tasks/unrunlist" Match="NavLinkMatch.All">
-                                    未执行任务
+                                <NavLink class="nav-link" href="/fss/tasks/finishlist" Match="NavLinkMatch.All">
+                                    完成的任务
                                 </NavLink>
                             </dd>
                             <dd data-name="form">
