--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/List.razor
@@ -143,7 +143,7 @@
                                 </td>
                                 <td data-field="Title">
                                     <div class="layui-table-cell laytable-cell-task-9">
-                                        @if (info.Status is EumTaskType.None or EumTaskType.Scheduler or EumTaskType.Working)
+                                        @if (info.Status is EumTaskType.Scheduler or EumTaskType.Working)
                                         {
                                             <button class="layui-btn layui-btn-radius layui-btn-xs" @onclick="() => Cancel(info)">
                                                 <i class="layui-icon"></i>
