--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -24,6 +24,11 @@
                             大盘
                         </NavLink>
                     </dd>
+                    <dd data-name="console">
+                        <NavLink class="nav-link" href="/fssmain">
+                            Fss监控
+                        </NavLink>
+                    </dd>
                 </dl>
             </li>
             @{
