修改配置格式

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/HeadMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/HeadMenu.razor
@@ -101,7 +101,7 @@
         var fssServers = _iocManager.Resolve<IConfigurationRoot>().GetSection("FSS:Server").GetChildren();
         foreach (var configurationSection in fssServers)
         {
-            _dicFssServer[configurationSection.GetSection("Name").Value] = configurationSection.GetSection("Url").Value;
+            _dicFssServer[configurationSection.Key] = configurationSection.Value;
         }
     }
 
