--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/TaskList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/TaskList.razor
@@ -66,7 +66,7 @@
             var info = _lst[index];
             <tr data-index="@index">
                 <td>
-                    <div class="laytable-cell-task-1">@info.Caption</div>
+                    <div class="laytable-cell-task-1"><span lay-tips="@info.JobName">@info.Caption</span></div>
                 </td>
                 <td>
                     <div class="layui-table-cell laytable-cell-task-2">
@@ -140,7 +140,7 @@
 .laytable-cell-task-2 {width: 150px;}
 .laytable-cell-task-3 {width: 60px;}
 .laytable-cell-task-4 {width: 80px;}
-.laytable-cell-task-5 {width: 180px;}
+.laytable-cell-task-5 {width: 160px;}
 .laytable-cell-task-6 {width: 150px;}
 .laytable-cell-task-7 {width: 80px;}
 </style>
